[update] add Monero library

--- a/MobileMiner/app/build.gradle
+++ b/MobileMiner/app/build.gradle
@@ -35,7 +35,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:23.2.1'
 
     compile project(':zcash')
+    compile project(':monero')
 }
