--- a/MobileMiner/zcash/build.gradle
+++ b/MobileMiner/zcash/build.gradle
@@ -32,7 +32,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile project(':commonLibs')
+    compile project(':miner-core')
 }
 
 def sdkAarName = 'WaterholeZcashMiner_1.0'
