[update] 新开service进程挖矿，代码整理

--- a/MobileMiner/zcash/src/main/AndroidManifest.xml
+++ b/MobileMiner/zcash/src/main/AndroidManifest.xml
@@ -1,2 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="waterhole.miner.zcash" />
+    package="waterhole.miner.zcash">
+
+    <application>
+        <service
+            android:name=".MineService"
+            android:process=":zcash_miner" />
+    </application>
+</manifest>
