[update] add eth library

--- a/MobileMiner/app/build.gradle
+++ b/MobileMiner/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
     compile project(':zcash')
+    compile project(':eth')
     compile project(':monero')
 }
