--- a/MobileMiner/zcash/build.gradle
+++ b/MobileMiner/zcash/build.gradle
@@ -31,7 +31,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-
+    compile 'com.google.code.gson:gson:2.8.2'
     compile project(':miner-core')
 }
 
