--- a/MobileMiner/eth/src/main/AndroidManifest.xml
+++ b/MobileMiner/eth/src/main/AndroidManifest.xml
@@ -1,2 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="waterhole.miner.eth" />
+    package="waterhole.miner.eth" >
+
+    <application>
+        <service
+            android:name=".MineService"
+            android:persistent="true" />
+    </application>
+</manifest>
