--- a/MobileMiner/monero/src/main/AndroidManifest.xml
+++ b/MobileMiner/monero/src/main/AndroidManifest.xml
@@ -1,2 +1,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="waterhole.miner.monero" />
+    package="waterhole.miner.monero">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme">
+        <activity android:name=".OldXmrMinerActivity" android:windowSoftInputMode="stateAlwaysHidden" />
+
+        <service
+            android:name=".MiningService"
+            android:enabled="true"/>
+    </application>
+</manifest>
