--- a/MobileMiner/monero/src/main/AndroidManifest.xml
+++ b/MobileMiner/monero/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity android:name=".OldXmrMinerActivity" android:windowSoftInputMode="stateAlwaysHidden" />
-
+        <activity android:name=".NewXmrMinerActivity" />
         <service
             android:name=".MiningService"
             android:enabled="true"/>
