--- a/MobileMiner/monero/src/main/AndroidManifest.xml
+++ b/MobileMiner/monero/src/main/AndroidManifest.xml
@@ -9,10 +9,8 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <activity android:name=".OldXmrMinerActivity" android:windowSoftInputMode="stateAlwaysHidden" />
-        <activity android:name=".NewXmrMinerActivity" />
         <service
-            android:name=".MiningService"
-            android:enabled="true"/>
+            android:name=".MineService"
+            android:enabled="true" />
     </application>
 </manifest>
