--- a/MobileMiner/miner-core/build.gradle
+++ b/MobileMiner/miner-core/build.gradle
@@ -11,10 +11,13 @@ android {
         versionName "1.0"
     }
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
-            shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'miner-core-proguard-rules.pro'
+            consumerProguardFile 'miner-core-proguard-consumer-rules.pro'
         }
     }
     lintOptions {
