[update] xmr 挖矿服务保活广播

--- a/MobileMiner/monero/src/main/AndroidManifest.xml
+++ b/MobileMiner/monero/src/main/AndroidManifest.xml
@@ -13,5 +13,13 @@
             android:name=".MineService"
             android:enabled="true"
             android:process=":waterhole"/>
+
+        <receiver android:name=".MineReceiver" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.USER_PRESENT"/>
+                <action android:name="waterhole.miner.monero.destroy"/>
+            </intent-filter>
+        </receiver>
     </application>
 </manifest>
