--- a/MobileMiner/miner-core/src/main/AndroidManifest.xml
+++ b/MobileMiner/miner-core/src/main/AndroidManifest.xml
@@ -5,6 +5,6 @@
         <service
             android:name=".CallbackService"
             android:enabled="true"
-            android:process=":waterhole"/>
+            android:process=":water"/>
     </application>
 </manifest>
