--- a/MobileMiner/monero/src/main/AndroidManifest.xml
+++ b/MobileMiner/monero/src/main/AndroidManifest.xml
@@ -1,20 +1,20 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="waterhole.miner.monero">
+<manifest package="waterhole.miner.monero"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <service
-            android:name=".MineService"
+            android:name="waterhole.miner.monero.MineService"
             android:enabled="true"
             android:process=":waterhole"/>
 
-        <receiver android:name=".MineReceiver" >
+        <receiver android:name=".MineReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
                 <action android:name="android.intent.action.USER_PRESENT"/>
