[update] 修复混淆问题

--- a/MobileMiner/app/build.gradle
+++ b/MobileMiner/app/build.gradle
@@ -38,6 +38,13 @@ android {
             dirs 'libs'
         }
     }
+
+    buildTypes {
+        release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
 }
 
 dependencies {
