--- a/MobileMiner/gradle.properties
+++ b/MobileMiner/gradle.properties
@@ -16,3 +16,11 @@
 
 android.useDeprecatedNdk=true
 org.gradle.jvmargs=-Xmx2048m
+MAVEN_REPO_RELEASE_URL=http://dc.eidon.top:9994/repository/waterhole_release/
+MAVEN_REPO_SNAPSHOT_URL=http://dc.eidon.top:9994/repository/waterhole_snapshot/
+GROUP = common
+NEXUS_USERNAME=waterhole
+NEXUS_PASSWORD=guessGuess
+GROUP_ID = common
+TYPE = aar
+DESCRIPTION = waterhole_miner
