--- a/MobileMiner/app/build.gradle
+++ b/MobileMiner/app/build.gradle
@@ -51,11 +51,13 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
     // aar引用方式
-    compile(name: 'miner-core-release', ext: 'aar')
-    compile(name: 'monero-release', ext: 'aar')
+//    compile(name: 'miner-core-release', ext: 'aar')
+//    compile(name: 'monero-release', ext: 'aar')
 
     // project引用方式
-    //compile project(':monero')
-    //compile project(':zcash')
-    //compile project(':eth')
+//    compile project(':monero')
+    compile project(':zcash')
+    compile project(':eth')
+    compile 'common:miner-xmr:1.0.0'
+    compile 'common:miner-core:1.0.0'
 }
