--- a/MobileMiner/build.gradle
+++ b/MobileMiner/build.gradle
@@ -14,8 +14,9 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
         maven { url "http://dc.eidon.top:9994/repository/waterhole_release/" }
+        maven { url "http://dc.eidon.top:9994/service/rest/repository/browse/waterhole_release/" }
+        jcenter()
     }
 }
 
