--- a/MobileMiner/miner-core/build.gradle
+++ b/MobileMiner/miner-core/build.gradle
@@ -27,6 +27,13 @@ android {
     }
 }
 
+dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    compile 'com.umeng.sdk:common:1.5.0'
+    compile 'com.umeng.sdk:analytics:7.5.0'
+}
+
 def sdkAarName = 'WaterholeMinerCore_1.0'
 def sourceAar = 'WaterholeMinerCore-release'
 
