--- a/MobileMiner/miner-core/build.gradle
+++ b/MobileMiner/miner-core/build.gradle
@@ -30,8 +30,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.umeng.sdk:common:1.5.0'
-    compile 'com.umeng.sdk:analytics:7.5.0'
+    compile 'com.umeng.analytics:analytics:latest.integration'
 }
 
 def sdkAarName = 'WaterholeMinerCore_1.0'
