--- a/MobileMiner/miner-core/build.gradle
+++ b/MobileMiner/miner-core/build.gradle
@@ -30,7 +30,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.umeng.analytics:analytics:latest.integration'
+    compile 'com.umeng.analytics:analytics:6.1.3'
 }
 
 def sdkAarName = 'WaterholeMinerCore_1.0'
