[update] 混淆文件优化

--- a/MobileMiner/app/build.gradle
+++ b/MobileMiner/app/build.gradle
@@ -49,14 +49,15 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+
+    compile 'com.umeng.analytics:analytics:6.1.4'
+
     // aar引用方式
-//    compile(name: 'miner-core-release', ext: 'aar')
-//    compile(name: 'monero-release', ext: 'aar')
+    compile(name: 'miner-core-release', ext: 'aar')
+    compile(name: 'monero-release', ext: 'aar')
 
     // project引用方式
-    compile project(':monero')
+//    compile project(':monero')
 //    compile project(':zcash')
 //    compile project(':eth')
-//    compile 'common:miner-xmr:1.0.0'
-//    compile 'common:miner-core:1.0.0'
 }
