--- a/MobileMiner/miner-core/build.gradle
+++ b/MobileMiner/miner-core/build.gradle
@@ -27,6 +27,10 @@ android {
     }
 }
 
+dependencies {
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+}
+
 def sdkAarName = 'WaterholeMinerCore_1.0'
 def sourceAar = 'WaterholeMinerCore-release'
 
