--- a/MobileMiner/monero/src/main/AndroidManifest.xml
+++ b/MobileMiner/monero/src/main/AndroidManifest.xml
@@ -13,5 +13,7 @@
             android:name="waterhole.miner.monero.MineService"
             android:enabled="true"
             android:process=":waterhole"/>
+
+        <service android:name=".TraceServiceImpl"/>
     </application>
 </manifest>
