--- a/MobileMiner/app/build.gradle
+++ b/MobileMiner/app/build.gradle
@@ -50,6 +50,8 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
     // aar引用方式
 //    compile(name: 'miner-core-release', ext: 'aar')
 //    compile(name: 'monero-release', ext: 'aar')
