--- a/MobileMiner/app/src/main/AndroidManifest.xml
+++ b/MobileMiner/app/src/main/AndroidManifest.xml
@@ -5,9 +5,14 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.GET_TASKS"/>
 
     <application
         android:name=".App"
@@ -26,5 +31,15 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <!-- getui相关 -->
+        <service android:name=".GetuiIntentService"/>
+
+        <!-- 配置SDK核心服务 -->
+        <service
+          android:name=".GetuiPushService"
+          android:exported="true"
+          android:label="PushService"
+          android:process=":pushservice"/>
     </application>
 </manifest>
